--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "firebase": "^7.17.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.2"
+    "react-redux-firebase": "^3.7.0",
+    "react-scripts": "3.4.2",
+    "redux": "^4.0.5",
+    "redux-firestore": "^0.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
